project('docky', 'c',
        version: '0.1.0',
        meson_version: '>= 0.57.0',
        default_options: [
            'buildtype=plain',
            'warning_level=2',
            'werror=true',
            'c_std=gnu11',
        ],
        license: 'Apache-2.0',
)

prefix = get_option('prefix')

subdir('src')